--- a/notebooks/data_driven_modeling.ipynb
+++ b/notebooks/data_driven_modeling.ipynb
@@ -50202,14 +50202,322 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating on validation set\n",
+      "Running model setup: direct\n",
+      "Training model\n",
+      "Evaluating on validation set\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">META-1_METER-2-train_ratio-0.2</strong> at: <a href='https://wandb.ai/wattcast/net-load-forecasting/runs/li8p8vqh' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting/runs/li8p8vqh</a><br/>Synced 6 W&B file(s), 2 media file(s), 1 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20230605_181337-li8p8vqh\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e251cccac29a4caeac624b547193ae7a",
+       "model_id": "9167277095b742c6b9e6c2845a34ddd2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.016666666666666666, max=1.0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.15.3 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.14.0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>c:\\Users\\nik\\Desktop\\Berkeley_Projects\\net-load-forecasting\\wandb\\run-20230605_182841-sdwp8qbt</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/wattcast/net-load-forecasting/runs/sdwp8qbt' target=\"_blank\">META-1_METER-2-train_ratio-0.5</a></strong> to <a href='https://wandb.ai/wattcast/net-load-forecasting' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/wattcast/net-load-forecasting' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/wattcast/net-load-forecasting/runs/sdwp8qbt' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting/runs/sdwp8qbt</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model setup: additive\n",
+      "Training model\n",
+      "Evaluating on validation set\n",
+      "Running model setup: integrated\n",
+      "Training model\n",
+      "Evaluating on validation set\n",
+      "Running model setup: direct\n",
+      "Training model\n",
+      "Evaluating on validation set\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">META-1_METER-2-train_ratio-0.5</strong> at: <a href='https://wandb.ai/wattcast/net-load-forecasting/runs/sdwp8qbt' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting/runs/sdwp8qbt</a><br/>Synced 6 W&B file(s), 2 media file(s), 1 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20230605_182841-sdwp8qbt\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97fd129a50574d9ba97e83962189e9cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.016666666666666666, max=1.0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.15.3 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.14.0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>c:\\Users\\nik\\Desktop\\Berkeley_Projects\\net-load-forecasting\\wandb\\run-20230605_184845-bebbvovy</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/wattcast/net-load-forecasting/runs/bebbvovy' target=\"_blank\">META-1_METER-2-train_ratio-0.8</a></strong> to <a href='https://wandb.ai/wattcast/net-load-forecasting' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/wattcast/net-load-forecasting' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/wattcast/net-load-forecasting/runs/bebbvovy' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting/runs/bebbvovy</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model setup: additive\n",
+      "Training model\n",
+      "Evaluating on validation set\n",
+      "Running model setup: integrated\n",
+      "Training model\n",
+      "Evaluating on validation set\n",
+      "Running model setup: direct\n",
+      "Training model\n",
+      "Evaluating on validation set\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">META-1_METER-2-train_ratio-0.8</strong> at: <a href='https://wandb.ai/wattcast/net-load-forecasting/runs/bebbvovy' target=\"_blank\">https://wandb.ai/wattcast/net-load-forecasting/runs/bebbvovy</a><br/>Synced 6 W&B file(s), 2 media file(s), 1 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20230605_184845-bebbvovy\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -50260,7 +50568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50269,7 +50577,7 @@
     "\n",
     "for meter in ['1','2']:\n",
     "    for train_ratio in [0.1, 0.2, 0.5, 0.8]:\n",
-    "        df_metric = scores_dict_meter[meter][train_ratio][0]\n",
+    "        df_metric = scores_dict_meter[meter][train_ratio]\n",
     "        df_metric['METER_SCEN'] = int(meter)\n",
     "        df_metric['train_ratio'] = train_ratio\n",
     "        df_metric.reset_index(inplace=True)\n",
@@ -50280,7 +50588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metrics_all.to_csv(os.path.join(os.getcwd(),'data','model_results','df_metrics_all.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -50291,89 +50608,40 @@
        },
        "data": [
         {
-         "hovertemplate": "METER_SCEN=1<br>model_setup=prediction_direct<br>train_ratio=%{x}<br>rmse=%{y}<extra></extra>",
-         "legendgroup": "1",
-         "line": {
-          "color": "#636efa",
-          "dash": "solid"
-         },
-         "marker": {
-          "symbol": "circle"
-         },
-         "mode": "lines",
-         "name": "1",
-         "orientation": "h",
-         "showlegend": true,
-         "type": "scatter",
+         "name": "METER-1",
+         "type": "bar",
          "x": [
           0.1,
           0.2,
           0.5,
           0.8
          ],
-         "xaxis": "x",
          "y": [
-          6.159618790237755,
-          5.330825619816691,
-          5.610116907779998,
-          5.647967855047917
-         ],
-         "yaxis": "y"
+          115.57674749108833,
+          112.12510147183563,
+          110.0359299789101,
+          109.08177982727739
+         ]
         },
         {
-         "hovertemplate": "METER_SCEN=2<br>model_setup=prediction_direct<br>train_ratio=%{x}<br>rmse=%{y}<extra></extra>",
-         "legendgroup": "2",
-         "line": {
-          "color": "#EF553B",
-          "dash": "solid"
-         },
-         "marker": {
-          "symbol": "circle"
-         },
-         "mode": "lines",
-         "name": "2",
-         "orientation": "h",
-         "showlegend": true,
-         "type": "scatter",
+         "name": "METER-2",
+         "type": "bar",
          "x": [
           0.1,
           0.2,
           0.5,
           0.8
          ],
-         "xaxis": "x",
          "y": [
-          6.489219942173992,
-          5.196447886863,
-          5.4627229495990415,
-          5.458808955862446
-         ],
-         "yaxis": "y"
+          112.61315910008761,
+          107.58202771903414,
+          107.50330371202462,
+          107.33203234395376
+         ]
         }
        ],
        "layout": {
-        "annotations": [
-         {
-          "font": {},
-          "showarrow": false,
-          "text": "model_setup=prediction_direct",
-          "x": 0.5,
-          "xanchor": "center",
-          "xref": "paper",
-          "y": 1,
-          "yanchor": "bottom",
-          "yref": "paper"
-         }
-        ],
-        "legend": {
-         "title": {
-          "text": "METER_SCEN"
-         },
-         "tracegroupgap": 0
-        },
-        "margin": {
-         "t": 60
-        },
+        "barmode": "group",
         "template": {
          "data": {
           "bar": [
@@ -51191,23 +51459,13 @@
          }
         },
         "xaxis": {
-         "anchor": "y",
-         "domain": [
-          0,
-          1
-         ],
          "title": {
-          "text": "train_ratio"
+          "text": "Ratio of data used for training"
          }
         },
         "yaxis": {
-         "anchor": "x",
-         "domain": [
-          0,
-          1
-         ],
          "title": {
-          "text": "rmse"
+          "text": "Imbalance costs [€]"
          }
         }
        }
@@ -51218,18 +51476,24 @@
     }
    ],
    "source": [
-    "# TODO solve 2 problems:\n",
+    "# TODO run for missing ratios,\n",
     "\n",
-    "# 1. the meter 2 has a better performance than meter 1, this is impossible since meter 2 has a data gap of 24 hours\n",
-    "# possible reason: taking out the timesteps of the first 24h of meter 2 makes the concated validation unequal to the validation of meter 1 somehow\n",
-    "\n",
-    "# 2. increasing the training ratio should improve the performance, but it does not\n",
-    "\n",
-    "t = df_metrics_all.loc[df_metrics_all['model_setup']=='prediction_direct']\n",
+    "# make the plot for the paper with matplotlib instead of plotly\n",
     "\n",
     "\n",
-    "fig = px.line(t, x='train_ratio', y='rmse', color='METER_SCEN', facet_col='model_setup')\n",
-    "fig.show()"
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "t = df_metrics_all.loc[df_metrics_all['model_setup'] == 'prediction_additive']\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "for meter_scen, group_df in t.groupby('METER_SCEN'):\n",
+    "    fig.add_trace(go.Bar(x=group_df['train_ratio'], y=group_df['imbalance_costs'], name='METER-' + str(meter_scen)))\n",
+    "\n",
+    "fig.update_layout(barmode='group',\n",
+    "                  xaxis_title=\"Ratio of data used for training\",\n",
+    "                  yaxis_title=\"Imbalance costs [€]\",)\n",
+    "fig.show()\n"
    ]
   },
   {
