updated modelling framework

--- a/notebooks/pv_modeling.ipynb
+++ b/notebooks/pv_modeling.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "model_data_path = os.path.join(os.getcwd(),'data','model_data')\n",
     "\n",
-    "scenarios_to_build = ['META-1', 'META-2', 'META-3', 'META-4']\n",
+    "scenarios_to_build = ['META-1', 'META-2', 'META-3', 'META-4', 'META-5']\n",
     "\n",
     "resolutions = [\n",
     "                #'1min', \n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: '15min'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  check_attribute_name(name)\n",
       "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-1'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  check_attribute_name(name)\n"
      ]
@@ -110,6 +108,21 @@
       "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-4'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  check_attribute_name(name)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating PV forecasts for scenario: META-5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-5'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
+      "  check_attribute_name(name)\n"
+     ]
     }
    ],
    "source": [
@@ -145,13 +158,6 @@
     "store.close()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
