started darts patching & patching experiments

--- a/notebooks/pv_modeling.ipynb
+++ b/notebooks/pv_modeling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,23 @@
     "\n",
     "model_data_path = os.path.join(os.getcwd(),'data','model_data')\n",
     "\n",
-    "scenarios_to_build = ['META-1', 'META-2', 'META-3', 'META-4', 'META-5']\n",
+    "scenarios_to_build = [\n",
+    "                        'META-1',\n",
+    "                        # 'META-2',\n",
+    "                        # 'META-3',\n",
+    "                        # 'META-4', \n",
+    "                        # 'META-5'\n",
+    "                    ]\n",
     "\n",
     "resolutions = [\n",
-    "                #'1min', \n",
-    "                '15min'\n",
+    "                '1min', \n",
+    "                #'15min'\n",
     "                ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -63,70 +69,10 @@
       "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-1'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  check_attribute_name(name)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating PV forecasts for scenario: META-2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-2'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  check_attribute_name(name)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating PV forecasts for scenario: META-3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-3'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  check_attribute_name(name)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating PV forecasts for scenario: META-4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-4'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  check_attribute_name(name)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating PV forecasts for scenario: META-5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nik\\miniconda3\\envs\\gpu2\\lib\\site-packages\\tables\\path.py:137: NaturalNameWarning: object name is not a valid Python identifier: 'pv_forecast_META-5'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  check_attribute_name(name)\n"
-     ]
     }
    ],
    "source": [
-    "store = pd.HDFStore(os.path.join(model_data_path, \"pv_model_results.h5\"))\n",
+    "store = pd.HDFStore(os.path.join(model_data_path, \"pv_model_results_2.h5\"))\n",
     "\n",
     "for temp_resolution in resolutions:\n",
     "\n",
@@ -158,6 +104,13 @@
     "store.close()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
